added kubernetes packages and on-hold feature to block their update

--- a/playbook.yml
+++ b/playbook.yml
@@ -3,7 +3,9 @@
   become: yes
   connection: local
   roles:
-    - role: ssh
+#    - role: ssh
+    - role: k8s-common
+    - role: master
 
 #- hosts: nodes
 #  become: yes
