--- a/roles/master/tasks/main.yml
+++ b/roles/master/tasks/main.yml
@@ -1,7 +1,10 @@
 ---
-- name: Install our packages
+- name: Install Kubernetes management packages
   apt: name={{item}} state=present
   with_items:
-        - mc
-        - sshpass
+    - kubeadm
+    - kubectl
+
+
+
 
