--- a/playbook.yml
+++ b/playbook.yml
@@ -3,13 +3,16 @@
   become: yes
   connection: local
   roles:
-#    - role: ssh
+    - role: misc
+    - role: ssh
     - role: k8s-common
     - role: master
 
-#- hosts: nodes
-#  become: yes
-#  roles:
-#    - role: node
+- hosts: nodes
+  become: yes
+  roles:
+    - role: misc
+    - role: k8s-common
+    - role: node
 
 
