work on k8s nodes configuration

--- a/roles/k8s-common/tasks/main.yml
+++ b/roles/k8s-common/tasks/main.yml
@@ -23,6 +23,8 @@
   with_items:
     - docker.io
     - kubelet
+    - kubeadm
+    - kubectl
 
 - name: Check on-hold packages
   command: apt-mark showhold
