--- a/roles/master/tasks/main.yml
+++ b/roles/master/tasks/main.yml
@@ -19,7 +19,7 @@
   become_user: root
   become_method: sudo
   become: true
-  command: kubeadm init --apiserver-advertise-address=172.16.94.10 --pod-network-cidr=192.168.0.0/16  
+  command: kubeadm init --ignore-preflight-errors=NumCPU --apiserver-advertise-address=172.16.94.10 --pod-network-cidr=192.168.0.0/16  
   register: k8s_init
   when: port_is_occupied.stdout != 'LISTEN'
 
