--- a/roles/master/tasks/main.yml
+++ b/roles/master/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
-- name: Download Calico network setup file for the v.{{ k8s_version }}
-  get_url: url={{ item }} dest=/tmp/
-  with_items:
-    - https://docs.projectcalico.org/v3.8/manifests/calico.yaml
-  when: k8s_version == "1.19.0-00"
+#- name: Download Calico network setup file for the v.{{ k8s_version }}
+#  get_url: url={{ item }} dest=/tmp/
+#  with_items:
+#    - https://docs.projectcalico.org/v3.8/manifests/calico.yaml
+#  when: k8s_version == "1.19.0-00"
 
 - name: Check if Kubernetes cluster is present and works
   shell: netstat -tunlp | grep ":6443" | awk '{print $6}'
@@ -49,11 +49,19 @@
   debug: 
     msg: "{{ msg.split('\n') }}"
 
-- name: Initialize Calico
+#- name: Initialize Calico
+#  become_user: root
+#  become_method: sudo
+#  become: true
+#  shell: export KUBECONFIG=/etc/kubernetes/admin.conf && kubectl apply -f /tmp/calico.yaml
+
+- name: Initialize Weave network plugin
   become_user: root
   become_method: sudo
   become: true
-  shell: export KUBECONFIG=/etc/kubernetes/admin.conf && kubectl apply -f /tmp/calico.yaml
+  shell: |
+    export KUBECONFIG=/etc/kubernetes/admin.conf &&\
+    kubectl apply -f "https://cloud.weave.works/k8s/net?k8s-version=$(kubectl version | base64 | tr -d '\n')"
 
 - name: Prepare directory for root kubernetes config
   become_user: root
