--- a/roles/master/tasks/main.yml
+++ b/roles/master/tasks/main.yml
@@ -13,7 +13,10 @@
   become_user: root
   become_method: sudo
   become: true
-  command: kubeadm init --apiserver-advertise-address=172.16.94.10 --pod-network-cidr=192.168.0.0/16
+  #adjustment for weave network plugin
+  #command: kubeadm init --apiserver-advertise-address=172.16.94.10 --pod-network-cidr=192.168.0.0/16
+  #adjustment for Calico
+  command: kubeadm init --apiserver-advertise-address=172.16.94.10 --pod-network-cidr=10.244.0.0/16
   register: k8s_init
   when: port_is_occupied.stdout != 'LISTEN'
 
@@ -49,7 +52,8 @@
   become: true
   shell: |
     export KUBECONFIG=/etc/kubernetes/admin.conf &&\
-    kubectl apply -f "https://cloud.weave.works/k8s/net?k8s-version=$(kubectl version | base64 | tr -d '\n')"
+    kubectl apply -f "https://docs.projectcalico.org/archive/v3.18/manifests/calico.yaml"
+  #kubectl apply -f "https://cloud.weave.works/k8s/net?k8s-version=$(kubectl version | base64 | tr -d '\n')"
 
 - name: Prepare directory for root kubernetes config
   become_user: root
