--- a/roles/master/tasks/main.yml
+++ b/roles/master/tasks/main.yml
@@ -16,7 +16,8 @@
   #adjustment for weave network plugin
   #command: kubeadm init --apiserver-advertise-address=172.16.94.10 --pod-network-cidr=192.168.0.0/16
   #adjustment for Calico
-  command: kubeadm init --apiserver-advertise-address=172.16.94.10 --pod-network-cidr=10.244.0.0/16
+  command: kubeadm init --apiserver-advertise-address=172.16.94.10 --pod-network-cidr=10.244.0.0/16 --ignore-preflight-errors all
+  ignore_errors: yes
   register: k8s_init
   when: port_is_occupied.stdout != 'LISTEN'
 
